@@ -1,5 +1,13 @@
 2005-11-22  Hollis Blanchard  <hollis@penguinppc.org>
 
+	* term/tparm.c (get_space): Remove empty `if' statement.
+
+	* fs/ufs.c (grub_ufs_find_file): Remove `grub_le_to_cpu32'.
+
+	* kern/parser.c (check_varstate): Rename `state' to 's'.
+
+2005-11-22  Hollis Blanchard  <hollis@penguinppc.org>
+
 	* partmap/acorn.c: Change `unsigned' to `unsigned int'.  Move all
 	variable definitions to the beginning of each function.  Sort stack
 	variables by size.
